# chat_app_petproject

./: .env  pyproject.toml
config/: settings.py
