[tool.poetry]
name = "chat-app"
version = "0.1.0"
description = ""
authors = ["baha <baktiarzaksylykov22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
Django = "^5.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
